# MetaPUF

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  coping_raw_files.py  generating_decoy.py  metapuf_env.yml  mkdocs.yml  pyproject.toml  searchgui_search.py
.snakemake/metadata/: aW5wdXQvUmF3L1MyNy9TMjcubWdm  aW5wdXQvUmF3L1MyNy9TMjcucmF3  aW5wdXQvUmF3L1MyOC9TMjgubWdm  aW5wdXQvUmF3L1MyOC9TMjgucmF3  c2VhcmNoZ3VpL1BYRDAwNTc4MF9zZWFyY2hndWkucGFy
config/: config.proteomics.yaml  proteins_decoy_generated_check.txt  rawurls.txt  sample_info.csv  sample_info_final.csv
docs/: Overview.md  Tutorial.md  Workflow.md  index.md
gff_generation/: gff_builder.py  main.py
metagenomics_db/: assemblies.txt  assembly_metadata.py  comparison_mat.py  comparison_mat_v1.py  db_connection.py  fetch_assemblies.py  fetch_data.py  fetch_proteins.py  get_clusters.py  get_proteins.py  main.py
post_report_generation/: main.py  track_hubs.py
searchgui/: PXD005780_searchgui.par
test-data/pride/: fetch-pride-test-data.sh
workflow/: Snakefile
workflow/envs/: IMP_proteomics.yaml  metagenomics_db.yaml  pandas_java.yaml  pandas_mono.yaml
workflow/rules/: generate_db.smk  gff_generation.smk  peptide_shaker.smk  post_processing.smk  raw_file_parse.smk  searchgui.smk
workflow/scripts/: coping_raw_files.py  generating_decoy.py  searchgui_search.py
workflow/scripts/gff_generation/: gff_builder.py  main.py
workflow/scripts/metagenomics_db/: fetch_data.py  get_clusters.py  main.py
workflow/scripts/post_report_generation/: main.py
